--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -7,8 +7,10 @@
         <!-- Css para resetar algumas propriedades diferentes da padrão by Kise -->
         <link rel="stylesheet" href="/static/estilo/normakise.css">
         <!-- Css de estilos padrões do projeto -->
-        <link rel="stylesheet" type="text/css" href="/static/estilo/site.css">
-        <link rel="stylesheet" href="/static/estilo/estilos.css">
+        {% load static %}
+        
+        <link rel="stylesheet" type="text/css" href={% static 'css/estilo/site.css' %}">
+        
     </head>
 
     <body>
