--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -9,7 +9,7 @@
         <!-- Css de estilos padrões do projeto -->
         {% load static %}
         
-        <link rel="stylesheet" type="text/css" href={% static 'css/estilo/site.css' %}">
+        <link rel="stylesheet" type="text/css" href={% static 'css/estilo/estilos.css' %}">
         
     </head>
 
