--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -6,7 +6,7 @@
         <title>HOME</title>
         {% load static %}
         <!-- Css para resetar algumas propriedades diferentes da padrão by Kise -->
-        < <link rel="stylesheet" type="text/css" href={% static 'estilo/normakise.css' %}">
+        <link rel="stylesheet" type="text/css" href={% static 'estilo/normakise.css' %}">
         <!-- Css de estilos padrões do projeto -->
         <link rel="stylesheet" type="text/css" href={% static 'estilo/estilos.css' %}">  
     </head>
