--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -4,11 +4,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>HOME</title>
-        {% load static %}
         <!-- Css para resetar algumas propriedades diferentes da padrão by Kise -->
-        <link rel="stylesheet" type="text/css" href={% static 'estilo/normakise.css' %}">
+        <link rel="stylesheet" href="/static/estilo/normakise.css">
         <!-- Css de estilos padrões do projeto -->
-        <link rel="stylesheet" type="text/css" href={% static 'estilo/estilos.css' %}">  
+        <link rel="stylesheet" type="text/css" href="/static/estilo/site.css">
+        <link rel="stylesheet" href="/static/estilo/estilos.css">
     </head>
 
     <body>
